--- a/sidebar/scss/style.scss
+++ b/sidebar/scss/style.scss
@@ -3,15 +3,116 @@
     display: none;
 }
 
-.side-panel {
+.side {
+    &-panel {
     position: fixed;
     z-index: 999999;
     top: 0;
-    //left: -360px;
-    left: 0;
+    left: -360px;
+    // left: 0;
     background: #337ab7;
     transition: all 0.5s;
     width: 320px;
     height: 100vh;
     box-shadow: 10px 0 20px rgba(0, 0, 0, 0.4);
+    color: #fff;
+    padding: 40px 20px;
+    }
+
+    &-title {
+        font-size: 20px;
+        padding-bottom: 10px;
+        margin-bottom: 20px;
+        border-bottom: 2px solid #bfe2ff;
+    }
+
+    // Офомление кнопки на странице
+
+    &-button-1-wr {
+        text-align: center; // контейнер для кнопки, чтобы было удобнее ее разместить
+    }
+
+    &-button-1 {
+        display: inline-block;
+    }
+
+    &-button-1 &-b {
+        margin: 10px;
+        text-decoration: none;
+        position: relative;
+        font-size: 20px;
+        line-height: 20px;
+        padding: 12px 30px;
+        color: #fff;
+        font-weight: bold;
+        text-transform: uppercase;
+        font-family: 'Roboto', Tahoma, sans-serif;
+        background-color: #337ab7;
+        cursor: pointer;
+        border: 2px solid #bfe2ff;
+    }
+    
+    &-button-1 &-b:hover,
+    &-button-1 &-b:active,
+    &-button-1 &-b:focus {
+        color: #fff;
+    }
+
+    &-button-1 &-b:after,
+    &-button-1 &-b:before {
+        position: absolute;
+        height: 4px;
+        left: 50%;
+        bottom: -6px;
+        content: "";
+        transition: all 280ms ease-in-out;
+        width: 0;
+    }
+}
+
+.side-button-1 .side-open:after,
+.side-button-1 .side-open:before {
+    background: green;
+}
+.side-button-1 .side-close:after,
+.side-button-1 .side-close:before {
+    background: red;
+}
+.side-button-1 .side-b:before {
+    top: -6px;
+}
+.side-button-1 .side-b:hover:after,
+.side-button-1 .side-b:hover:before {
+    width: 100%;
+    left: 0;
+}
+/* Переключатели кнопки 1 */
+.side-button-1 .side-close {
+    display: none;
+}
+#side-checkbox:checked + .side-panel + .side-button-1-wr .side-button-1 .side-open {
+    display: none;
+}
+#side-checkbox:checked + .side-panel + .side-button-1-wr .side-button-1 .side-close {
+    display: block;
+}
+#side-checkbox:checked + .side-panel {
+    left: 0;
+}
+/* Оформление кнопки на панеле */
+.side-button-2 {
+    font-size: 30px;
+    border-radius: 20px;
+    position: absolute;
+    z-index: 1;
+    top: 8px;
+    right: 8px;
+    cursor: pointer;
+    transform: rotate(45deg);
+    color: #BFE2FF;    
+    transition: all 280ms ease-in-out;    
+}
+.side-button-2:hover {
+    transform: rotate(45deg) scale(1.1);    
+    color: #FFF;
 }
